WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177441
Building release with -DLOG_DISABLED=0 fails
https://bugs.webkit.org/show_bug.cgi?id=177441
Summary
Building release with -DLOG_DISABLED=0 fails
Carlos Alberto Lopez Perez
Reported
2017-09-25 11:03:12 PDT
Building WebKitGTK+ release with CXXFLAGS='-DLOG_DISABLED=0' to enable logs results in this build failure: FAILED: Source/WebCore/CMakeFiles/WebCore.dir/Modules/indexeddb/IDBObjectStore.cpp.o /usr/lib/ccache/clang++ -DBUILDING_GTK__=1 [....] Source/WebCore/Modules/indexeddb/IDBObjectStore.cpp:427:116: error: use of undeclared identifier 'loggingString' LOG(IndexedDB, "IDBObjectStore::createIndex %s (keyPath: %s, unique: %i, multiEntry: %i)", name.utf8().data(), loggingString(keyPath).utf8().data(), parameters.unique, parameters.multiEntry); ^ 1 error generated.
Attachments
Patch
(1.82 KB, patch)
2017-09-25 11:07 PDT
,
Carlos Alberto Lopez Perez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Alberto Lopez Perez
Comment 1
2017-09-25 11:07:44 PDT
Created
attachment 321703
[details]
Patch
Michael Catanzaro
Comment 2
2017-09-25 12:39:59 PDT
Comment on
attachment 321703
[details]
Patch Not sure if I'm more surprised that you tried to do this, or that it's the only problem.
WebKit Commit Bot
Comment 3
2017-09-25 13:06:15 PDT
Comment on
attachment 321703
[details]
Patch Clearing flags on attachment: 321703 Committed
r222459
: <
http://trac.webkit.org/changeset/222459
>
WebKit Commit Bot
Comment 4
2017-09-25 13:06:17 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2017-09-27 12:18:05 PDT
<
rdar://problem/34692985
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug