Building release with -DLOG_DISABLED=0 fails https://bugs.webkit.org/show_bug.cgi?id=177441

Reviewed by Michael Catanzaro.

No new tests, it is a build fix.

* Modules/indexeddb/IDBKeyPath.cpp:
* Modules/indexeddb/IDBKeyPath.h:


Canonical link: https://commits.webkit.org/193753@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222459 268f45cc-cd09-0410-ab3c-d52691b4dbfc